[gd_scene load_steps=14 format=2]

[ext_resource path="res://nodes/bullet/Bullet.gd" type="Script" id=1]
[ext_resource path="res://nodes/bullet/concrete-impact.wav" type="AudioStream" id=2]
[ext_resource path="res://nodes/bullet/bullet-impact.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 20.0

[sub_resource type="Gradient" id=2]

offsets = PoolRealArray( 0, 0.625571, 1 )
colors = PoolColorArray( 0.199219, 0.130822, 0.129181, 1, 0.207031, 0.165744, 0.160126, 1, 0.191406, 0.160261, 0.127106, 0 )

[sub_resource type="GradientTexture" id=3]

flags = 4
gradient = SubResource( 2 )
width = 2048

[sub_resource type="ParticlesMaterial" id=4]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 20.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 45, 0 )
initial_velocity = 20.0
initial_velocity_random = 1.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 60.54
radial_accel_random = 0.5
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 50.0
angle_random = 1.0
scale = 8.0
scale_random = 0.0
color_ramp = SubResource( 3 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Color", "Damping", "Emission Shape", "Radial Accel", "Scale", "Tangential Accel" ]

[sub_resource type="Gradient" id=5]

offsets = PoolRealArray( 0, 0.648402, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0 )

[sub_resource type="GradientTexture" id=6]

flags = 4
gradient = SubResource( 5 )
width = 2048

[sub_resource type="ParticlesMaterial" id=7]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 26.17
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 45, 0 )
initial_velocity = 0.0
initial_velocity_random = 1.0
angular_velocity = 30.47
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 100.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 7.43
scale_random = 0.0
color_ramp = SubResource( 6 )
hue_variation = 0.1
hue_variation_random = 1.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angular Velocity", "Color", "Emission Shape", "Gravity", "Hue Variation", "Initial Velocity", "Radial Accel", "Scale", "Spread" ]

[sub_resource type="Gradient" id=8]

offsets = PoolRealArray( 0, 0.648402, 1 )
colors = PoolColorArray( 0.453125, 0.413922, 0.309753, 1, 0.478431, 0.458824, 0.411765, 1, 0.478431, 0.458824, 0.411765, 0 )

[sub_resource type="GradientTexture" id=9]

flags = 4
gradient = SubResource( 8 )
width = 2048

[sub_resource type="ParticlesMaterial" id=10]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 26.17
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 45, 0 )
initial_velocity = 0.0
initial_velocity_random = 1.0
angular_velocity = 30.47
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 100.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 7.43
scale_random = 0.0
color_ramp = SubResource( 9 )
hue_variation = 0.1
hue_variation_random = 1.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angular Velocity", "Color", "Emission Shape", "Gravity", "Hue Variation", "Initial Velocity", "Radial Accel", "Scale", "Spread" ]

[node name="Bullet" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="MissStreamPlayer" type="AudioStreamPlayer2D" parent="." index="1"]

stream = ExtResource( 2 )
volume_db = 10.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="DemonHitStreamPlayer" type="AudioStreamPlayer2D" parent="." index="2"]

stream = ExtResource( 3 )
volume_db = 20.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Effects"
area_mask = 1

[node name="ShieldHitStreamPlayer" type="AudioStreamPlayer2D" parent="." index="3"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="WallParticles" type="Particles2D" parent="." index="4"]

emitting = false
amount = 30
lifetime = 2.0
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 1.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 4 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Z Index" ]

[node name="BloodyParticles" type="Particles2D" parent="." index="5"]

emitting = false
amount = 40
lifetime = 2.5
one_shot = true
preprocess = 0.0
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 7 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Time" ]

[node name="WoodParticles" type="Particles2D" parent="." index="6"]

emitting = false
amount = 15
lifetime = 2.0
one_shot = true
preprocess = 0.0
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 10 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Time" ]

[node name="DestroyTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]


